--- a/views/pages/completed.ejs
+++ b/views/pages/completed.ejs
@@ -93,15 +93,15 @@
                                 </a>
                             </li>
                             <% } %>
-                                <% if(!currentUser) { %>
-                                    <li>
-                                        <a href="/register"
-                                            class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                                            <i class="ri-user-add-line"></i>
-                                            <span class="flex-1 ms-3 whitespace-nowrap">Sign Up</span>
-                                        </a>
-                                    </li>
-                                    <% } %>
+                            <% if(currentUser && currentUser.role==='admin' ) { %>
+                                <li>
+                                    <a href="/register"
+                                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+                                        <i class="ri-user-add-line"></i>
+                                        <span class="flex-1 ms-3 whitespace-nowrap">Invite User</span>
+                                    </a>
+                                </li>
+                                <% } %>
             </ul>
         </div>
     </aside>
