--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,6 +1,6 @@
 <% if (success && success.length) { %>
     <div class="w-full flex justify-center">
-        <div id="toast-success" class="flex items-center mx-auto w-full max-w-xs p-2 mb-4 text-gray-500 bg-green-200 rounded-lg shadow dark:text-green-400 dark:bg-green-800" role="alert">
+        <div id="toast-success" class="z-50 flex items-center mx-auto w-full max-w-xs p-2 mb-4 text-gray-500 bg-green-200 rounded-lg shadow dark:text-green-400 dark:bg-green-800" role="alert">
             <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200">
                 <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                     <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
@@ -19,8 +19,8 @@
 <% } %>
 
 <% if (error && error.length) { %>
-    <div class="w-full flex justify-center">
-        <div id="toast-warning" class="flex items-center mx-auto w-full max-w-xs p-2 text-gray-500 bg-red-200 rounded-lg shadow dark:text-red-400 dark:bg-red-800" role="alert">
+    <div class="w-full flex justify-center ">
+        <div id="toast-warning" class="z-50 flex items-center mx-auto w-full max-w-xs p-2 text-gray-500 bg-red-200 rounded-lg shadow dark:text-red-400 dark:bg-red-800" role="alert">
             <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-orange-500 bg-orange-100 rounded-lg dark:bg-orange-700 dark:text-orange-200">
                 <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                     <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM10 15a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 0 1-2 0V6a1 1 0 0 1 2 0v5Z"/>
