--- a/views/pages/details.ejs
+++ b/views/pages/details.ejs
@@ -232,7 +232,7 @@
                 <div class="mt-8 flex justify-between">
                      <form action="/bookings/pending/<%=booking._id %>/unapprove" method="POST">
                         <button type="submit"
-                        class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900" ">Unapprove</button>
+                        class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900" ">Reject</button>
                      </form>
                      <form action="/bookings/pending/<%=booking._id %>/approve" method="POST">
                         <button type="submit"
